# study_cpp

./: README.md
BoostLocaleConv/src/: main.cpp
BoostSignal2/: README.md
BoostSignal2/include/: door.h  remote.h
BoostSignal2/src/: door.cpp  main.cpp  remote.cpp
PatternDesign/: README.md
PatternDesign/AbstractFactory/include/: abstract_factory.hpp  factory.hpp
PatternDesign/AbstractFactory/src/: main.cpp
PatternDesign/Adapter/include/: adapter.hpp
PatternDesign/Adapter/src/: main.cpp
PatternDesign/Bridge/include/: bridge.hpp
PatternDesign/Bridge/src/: main.cpp
PatternDesign/Builder/include/: builder.hpp
PatternDesign/Builder/src/: main.cpp
PatternDesign/ChainOfResponsibility/include/: chain_of_responsibility.hpp
PatternDesign/ChainOfResponsibility/src/: main.cpp
PatternDesign/Command/include/: command.hpp
PatternDesign/Command/src/: main.cpp
PatternDesign/Composite/include/: composite.hpp
PatternDesign/Composite/src/: main.cpp
PatternDesign/Decorator/include/: decorator.hpp
PatternDesign/Decorator/src/: main.cpp
PatternDesign/Facade/include/: facade.hpp
PatternDesign/Facade/src/: main.cpp
PatternDesign/Factory/: arm.cmake
PatternDesign/Factory/include/: factory.hpp
PatternDesign/Factory/src/: main.cpp
PatternDesign/Flyweight/include/: flyweight.hpp
PatternDesign/Flyweight/src/: main.cpp
PatternDesign/Interpreter/include/: interpreter.hpp
PatternDesign/Interpreter/src/: main.cpp
PatternDesign/Iterator/include/: Iterator.hpp
PatternDesign/Iterator/src/: main.cpp
PatternDesign/Mediator/include/: mediator.hpp
PatternDesign/Mediator/src/: main.cpp
PatternDesign/Memento/include/: memento.hpp
PatternDesign/Memento/src/: main.cpp
PatternDesign/Observer/include/: observer.hpp
PatternDesign/Observer/src/: main.cpp
PatternDesign/Prototype/include/: prototype.hpp
PatternDesign/Prototype/src/: main.cpp
PatternDesign/Proxy/include/: proxy.hpp
PatternDesign/Proxy/src/: main.cpp
PatternDesign/SimpleFactory/include/: simple_factory.hpp
PatternDesign/SimpleFactory/src/: main.cpp
PatternDesign/Singleton/include/: hunger_singleton.h  unlock_lazy_singleton.h
PatternDesign/Singleton/src/: hunger_singleton.cpp  unlock_lazy_singleton.cpp
PatternDesign/State/include/: state.hpp
PatternDesign/State/src/: main.cpp
PatternDesign/Strategy/include/: strategy.hpp
PatternDesign/Strategy/src/: main.cpp
PatternDesign/Template/include/: template.hpp
PatternDesign/Template/src/: main.cpp
PatternDesign/Visitor/: CMakeLists.txt
PatternDesign/Visitor/include/: visitor.hpp
PatternDesign/Visitor/src/: main.cpp
Thread/Atomic/include/: atomic_spinlock_mutex.hpp
Thread/Atomic/src/: main.cpp
Thread/AtomicFence/include/: atomic_fence.hpp  bool_atomic_fence.hpp
Thread/AtomicFence/src/: life.md  main.cpp
Thread/AtomicOrder/include/: memory_order_acq_rel.hpp  memory_order_acq_rel_sync.hpp  memory_order_consume.hpp  memory_order_fetch_sub.hpp  memory_order_relaxed.hpp  memory_order_seq_cst.hpp
Thread/AtomicOrder/src/: main.cpp
Thread/ChronoManager/src/: main.cpp
Thread/ConditionVariables/include/: my_condition_variables.hpp
Thread/ConditionVariables/src/: main.cpp
Thread/FunctionFuture/: CMakeLists.txt  README.md
Thread/FunctionFuture/include/: my_future.hpp
Thread/FunctionFuture/src/: main.cpp
Thread/PackageTaskFuture/include/: package_task_future.hpp
Thread/PackageTaskFuture/src/: main.cpp
Thread/PromisesFuture/include/: promises_future.hpp
Thread/PromisesFuture/src/: main.cpp
Thread/ThreadManager/include/: thread_manager.hpp
Thread/ThreadManager/src/: main.cpp
Thread/ThreadPool/src/: main.cpp
epoll/boost_epoll/: Makefile
epoll/boost_epoll/include/: client.h  data_queue.h  dylibapi.h  lock_lazy_singleton.h
epoll/boost_epoll/log/: Client.ERROR  Client.INFO  Client.WARNING  Client.iiot.dev.log.ERROR.20200117-174756.26072  Client.iiot.dev.log.ERROR.20200117-175106.26177  Client.iiot.dev.log.ERROR.20200117-175239.26219  Client.iiot.dev.log.ERROR.20200117-212417.27341  Client.iiot.dev.log.ERROR.20200117-212604.27388  Client.iiot.dev.log.ERROR.20200119-091656.29219  Client.iiot.dev.log.ERROR.20200119-093816.29543  Client.iiot.dev.log.ERROR.20200119-093921.29554  Client.iiot.dev.log.ERROR.20200119-103456.29709  Client.iiot.dev.log.ERROR.20200119-105107.29816  Client.iiot.dev.log.ERROR.20200119-132935.30122  Client.iiot.dev.log.ERROR.20200119-133010.30168  Client.iiot.dev.log.ERROR.20200119-135020.30360  Client.iiot.dev.log.ERROR.20200119-135219.30423  Client.iiot.dev.log.ERROR.20200119-135321.30486  Client.iiot.dev.log.ERROR.20200119-152209.30825  Client.iiot.dev.log.ERROR.20200119-152928.30931  Client.iiot.dev.log.ERROR.20200119-153149.30974  Client.iiot.dev.log.INFO.20200117-160658.25241  Client.iiot.dev.log.INFO.20200117-160717.25278  Client.iiot.dev.log.INFO.20200117-160725.25321  Client.iiot.dev.log.INFO.20200117-165930.25525  Client.iiot.dev.log.INFO.20200117-170738.25571  Client.iiot.dev.log.INFO.20200117-174857.26116  Client.iiot.dev.log.INFO.20200117-175106.26177  Client.iiot.dev.log.INFO.20200117-191157.26331  Client.iiot.dev.log.INFO.20200117-194900.26483  Client.iiot.dev.log.INFO.20200117-195440.26495  Client.iiot.dev.log.INFO.20200117-200235.26594  Client.iiot.dev.log.INFO.20200117-200248.26600  Client.iiot.dev.log.INFO.20200117-201312.26664  Client.iiot.dev.log.INFO.20200117-201424.26705  Client.iiot.dev.log.INFO.20200117-210521.26814  Client.iiot.dev.log.INFO.20200117-212417.27341  (+44 more)
epoll/boost_epoll/src/: client.cpp  (+3 more)
epoll/thread_finish/: Makefile
example_components/: CMakeLists.txt  README.md  doxyfile
example_components/libs/arm/: README.md
example_components/libs/x64/: README.md
example_components/libs/x64/glog/: README.md
example_components/src/coroutines/: example_boost_asio_coroutine.cpp  example_switch_coroutine.c
example_components/src/thread_pool/: example_thread_pool.cpp
singleton/include/: lock_lazy_singleton.h
zlog/: CMakeLists.txt  README.md  zlog.conf
zlog/include/: zlog.conf.bak
zlog/libs/x64/zlog/lib/: libzlog.so.1.2
zlog/src/: main.c
(+16 files in other folders)
